Spacing between Card & Mockup Fixed

--- a/src/styles/quizResults.scss
+++ b/src/styles/quizResults.scss
@@ -52,7 +52,6 @@ button {
   #results {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    gap: 10px;
     text-align: center;
   }
 }
