--- a/src/styles/spotifyCard.scss
+++ b/src/styles/spotifyCard.scss
@@ -1,6 +1,6 @@
 .card {
   background-color: #000;
-  margin-bottom: 15px;
+  margin: 15px;
 }
 
 .card-body {
