--- a/src/styles/youtubeMockup.scss
+++ b/src/styles/youtubeMockup.scss
@@ -1,5 +1,5 @@
 .mockup {
-  margin-bottom: 15px;
+  margin: 15px;
 }
 
 //YouTube Mockup Styles
